# YieldOps

./: .gitignore  .secrets.baseline  AEGIS_INTEGRATION_GUIDE.md  AEGIS_SAND_TO_PACKAGE.md  AGENTS.md  Architecture.md  PHASE4_SUMMARY.md  RAILWAY_SETUP.md  README.md  REAL_DATA_VERIFICATION.md  debug_jobs.sql  koyeb.yaml  package-lock.json  package.json  vercel.json
aegis/: ARCHITECTURE.md  ATTRIBUTION.md  README.md  SECS_GEM_INTEGRATION.md  gem_adapter.py  requirements-gem.txt
aegis/aegis-sentinel/: Cargo.toml  Dockerfile
aegis/aegis-sentinel/src/: api_bridge.rs  detection.rs  main.rs  mqtt.rs  safety.rs  types.rs
aegis/aegis-sentinel/src/agents/: assembly.rs  facility.rs  mod.rs  precision.rs
aegis/config/: assembly-example.yaml
aegis/docker/: docker-compose.yml  init.sql  mosquitto.conf  quickstart.sh
aegis/knowledge-graph/: Dockerfile  api.py  knowledge_graph.py
aegis/sentinel-agent/: Dockerfile  sentinel_agent.py
aegis/simulator/: Dockerfile  ghost_cnc.py
aegis/supabase-bridge/: Cargo.toml
aegis/supabase-bridge/src/: main.rs  mqtt.rs  supabase.rs  types.rs
apps/api/: .env.railway.example  .gitignore  Dockerfile  README.md  koyeb.yaml  railway.toml  requirements.txt
apps/api/app/: __init__.py  config.py  (+1 more)
apps/dashboard/: .env.example  .env.railway.example  README.md  index.html  package.json  railway.json  vercel.json
database/: fix_job_config.sql  reset_and_seed.sql  reset_pending_jobs.sql  schema.sql  seed.sql
database/migrations/: 002_virtual_metrology.sql  003_aegis_sentinel_sand_to_package.sql  003_aegis_sentinel_sand_to_package_FIXED.sql  003_aegis_tables.sql  003_autonomous_jobs.sql  004_aegis_auto_incidents.sql  005_debug_trigger.sql  006_force_incidents.sql  007_auto_sensor_simulator.sql  verify_and_fix_sentinel.sql
ml/: Makefile  README.md  requirements.txt
ml/config/: jupytext.toml  nbconvert_html.tpl  scenario_conservative.json  scenario_optimistic.json
ml/notebooks/: anomaly_detection.ipynb  capacity_planning.ipynb  interactive_capacity_planning.ipynb  template_capacity_report.ipynb
ml/scripts/: data_generator.py  monte_carlo_sim.py  run_papermill_batch.py  train_anomaly_model.py
rust/: Cargo.toml  README.md  pyproject.toml
rust/monte_carlo/: Cargo.toml
rust/monte_carlo/src/: lib.rs
rust/scheduler/: Cargo.toml
rust/scheduler/src/: lib.rs
(+78 files in other folders)
