[package]
name = "aegis-sentinel"
version = "1.0.0"
edition = "2021"
authors = ["Angel L. Pinzon <angelpinzon1706@gmail.com>"]
description = "Aegis Sentinel - Autonomous defense agent for industrial equipment"
license = "MIT"
repository = "https://github.com/AngelP17/aegis-core"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Async traits
async-trait = "0.1"

# MQTT client
rumqttc = "0.23"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# Configuration
config = "0.14"

# HTTP client for YieldOps API
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "aegis-sentinel"
path = "src/main.rs"
