[package]
name = "aegis-supabase-bridge"
version = "1.0.0"
edition = "2021"
authors = ["YieldOps Team"]
description = "MQTT to Supabase bridge for Aegis Sentinel - Real-time telemetry ingestion"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
rumqttc = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
